# python-practice-field

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  setup.cfg
.cache/nitpick/: styles.sqlite
.github/workflows/: ci.yml  publish_image.yml  publish_package.yml  release.yml  tests.yml
app/: main.py
app/configs/: main_config.py
app/data/: default_products_substrs.txt
app/data_types/: orders_data_types.py
app/functions/: common.py  methods_functions.py
app/routers/: orders.py
src/: data_types.py  functions.py  main.py  sads.sql
src/functions/: api_methods_functions.py  common.py
tests/: test_api.py  test_main.py
training_api/: api_data_types.py  api_functions.py  main.py
