[virtualenvs]
create = true
in-project = true

[tool.poetry]
name = "training-project"
version = "0.1.0"
description = ""
authors = ["alexnazarv <alexnazarv@gmail.com>"]
readme = "README.md"
packages = [{include = "training_project"}]

[tool.poetry.dependencies]
python = "3.10.10"
fastapi = "0.101.0"
uvicorn = {extras = ["standard"], version = "0.23.2"}


[tool.poetry.group.dev.dependencies]
flake8 = "6.1.0"
pytest = "7.4.0"
httpx = "0.24.1"
isort = "5.12.0"
wemake-python-styleguide = "0.18.0"
mypy = "1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
