[virtualenvs]
create = true
in-project = true

[tool.poetry]
name = "training-project"
version = "0.1.0"
description = ""
authors = ["alexnazarv <alexnazarv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "0.101.0"
uvicorn = {extras = ["standard"], version = "0.23.2"}


[tool.poetry.group.dev.dependencies]
flake8 = "6.1.0"
pytest = "7.4.0"
httpx = "0.24.1"
isort = "5.12.0"
wemake-python-styleguide = "0.18.0"
mypy = "1.5.1"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-ra"]
minversion = "6.0"
testpaths = ["tests"]
console_output_style = "progress"
faulthandler_timeout=1


[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
no_implicit_reexport = true
local_partial_types = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
explicit_package_bases = true
disallow_untyped_defs = true


[tool.isort]
py_version = 310
line_length = 120
profile = "wemake"
extend_skip = [".md"]
skip_glob = [".github/*"]
extend_skip_glob = ["Dockerfile"]
skip_gitignore = true
src_paths = ["app", "tests"]
